# SMBReader

./: .gitignore  CMakeLists.txt  Compiler Explorer C++ Editor #1 Code.cpp  Compiler Explorer C++ Editor #1 Code_try2.cpp  Exporter.h  FileManager.h  README.md  SMB.h  SMBReader.sln  SMBReader.vcxproj  SMBReader.vcxproj.filters  SMBUnarchiverNotes.txt  StrangerTracking.xlsx  Texture.h  come.smb  main.cpp  s3tc.cpp  s3tc.h  shadercompile.bat  steef.smb  test.smb
attachmentdescriptions/: BasicShadowMapAtt.adf  BasicShadowMapAtt.xml  MSAAAttachment.adf  MSAAAttachment.xml  MSAAPostProcess.adf  ShadowAtlasUse.xml  noMSAAAttachment.adf  noMSAAAttachment.xml
examples/: CMakeLists.txt
examples/LinuxTest/: CMakeLists.txt  main.cpp
examples/SMBReader/: CMakeLists.txt  shadercompile.bat
examples/SMBReader/attachmentdescriptions/: ShadowAtlasUse.adf
examples/SMBReader/include/: ProgramArgs.h  UI.h
examples/SMBReader/pipelinelayout/: FullscreenPipeline.pld  OutlinePipeline.pld  UIObjectPipeline.pld
examples/SMBReader/shaders/: 2dFullscreenDraw.vert  InclusivePrefixSum.comp  MeshWorldAssignment.comp  SumAfterPrefixScan.comp  UIAbsolutePositioning.comp  UIChildDepthAdd.comp  UICulling.comp  UICursorSelection.comp  UIDepthCount.comp  UIElementAssignment.comp  UILayoutSizes.comp  UIObjectIDDraw.frag  UIObjectIDDraw.vert  UIPixelShader.frag  UIVertexShader.vert
examples/SMBReader/shaders/compiled/: 2dFullscreenDraw.frag.spv  2dFullscreenDraw.vert.spv  3dDebugDraw.frag.spv  3dDebugDraw.vert.spv  3dDebugObjectCulling.comp.spv  3dMeshCulling.comp.spv  3dMeshShadowmapCull.comp.spv  3dNormalDebug.frag.spv  3dNormalDebug.vert.spv  3dOutline.frag.spv  3dOutline.vert.spv  3dSkyBox.frag.spv  3dSkyBox.vert.spv  3dshadowmap.frag.spv  3dshadowmap.vert.spv  3dtextured.frag.spv  3dtextured.vert.spv  3dtexturedInstanced.vert.spv  BasicMeshInterpolate.comp.spv  DebugDraw.vert.spv  JointVisual.frag.spv  JointVisual.vert.spv  LightWorldAssignment.comp.spv  LightWorldCount.comp.spv  MeshWorldAssignment.comp.spv  MeshWorldCount.comp.spv  PrefixScan.comp.spv  SamplePolynomialImage.comp.spv  SumAfterPrefixScan.comp.spv  UICulling.comp.spv  UIDepthCount.comp.spv  UIPixelShader.frag.spv  UIVertexShader.vert.spv  addincrementsPFS.comp.spv  debugcull.comp.spv  fullscreen.frag.spv  fullscreen.vert.spv  indirectcull.comp.spv  lightworldsort.comp.spv  mesh_interpolate.comp.spv  (+15 more)
examples/SMBReader/shaders/include/: UI.iglsl
examples/SMBReader/shaders/layouts/: DebugDraw.sgr  FullscreenLayout.sgr  InclusivePrefixSum.sgr  JointVisualSL.sgr  LightObjectDivision.sgr  UIAbsolutePositioning.sgr  UIChildDepthAdd.comp  UIChildDepthAdd.sgr  UICulling.sgr  UICursorSelection.sgr  UIDrawing.sgr  UIIndexAssignments.sgr  UILayoutsSizes.sgr  UIObjectDrawID.sgr  WorldObjectDivison.sgr
examples/SMBReader/smb/include/: SMBExporter.h  SMBFile.h  SMBTexture.h
examples/SMBReader/smb/src/: SMBExporter.cpp  SMBFile.cpp  SMBTexture.cpp
examples/SMBReader/src/: ApplicationLoop.cpp
include/: AppAllocator.h  AppTexture.h  AppTextureImpl.h  AppTypes.h  ApplicationLoop.h  Camera.h  Exporter.h  FileManager.h  GenericObject.h  GlslangCompiler.h  LTM.h  Logger.h  MathTypes.h  Mesh.h  ProgramArgs.h  RenderInstance.h  RenderInstanceManagement.h  ResourceDependencies.h  SMB.h  SMBFile.h  SMBTexture.h  ShaderManagement.h  ShaderResourceSet.h  TextManager.h  Texture.h  TextureData.h  TextureDictionary.h  TextureIO.h  TextureVKImpl.h  ThreadManager.h  VKPipelineObject.h  VKShaderCache.h  VKTexture.h  VKUtilities.h  VertexTypes.h  VkRenderLoop.h  WindowManager.h
pipelinelayout/: DebugPipeline.pld  DebugPipeline.xml  FullscreenPipeline.pld  FullscreenPipeline.xml  GenericPipeline.pld  GenericPipeline.xml  JointVisualPipeline.pld  NormalDebugPipeline.pld  NormalDebugPipeline.xml  OutlinePipeline.pld  OutlinePipeline.xml  ShadowMap.pld  ShadowMap.xml  SkyboxPipeline.pld  SkyboxPipeline.xml  TextPipeline.pld  TextPipeline.xml  UIPipeline.pld
platform/: OSFile.h  OSMutex.h  OSThread.h  OSWindow.h
shaders/: 2dFullscreenDraw.frag  3dDebugDraw.vert  3dDebugObjectCulling.comp  3dMeshCulling.comp  3dMeshShadowmapCull.comp  3dNormalDebug.vert  3dOutline.vert  3dSkyBox.frag  3dSkyBox.vert  3dshadowmap.frag  3dshadowmap.vert  3dtextured.frag  3dtextured.vert  3dtexturedInstanced.vert  BasicMeshInterpolate.comp  DebugDraw.frag  DebugDraw.vert  JointVisual.frag  JointVisual.vert  LightWorldAssignment.comp  LightWorldCount.comp  MeshWorldCount.comp  PrefixScan.comp  SamplePolynomialImage.comp  SumAfterPrefixScan.comp  UICulling.comp  UIDepthCount.comp  UIPixelShader.frag  UIVertexShader.vert  debugcull.comp  fullscreen.frag  indirectcull.comp  lightworldsort.comp  mesh_interpolate.comp  meshworldsort.comp  normaldebug.vert  offsets.comp  organize.comp  organizelight.comp  outline.frag  (+7 more)
src/: AppAllocator.cpp  AppTexture.cpp  AppTextureImpl.cpp  ApplicationLoop.cpp  Camera.cpp  DXTCompression.cpp  Exporter.cpp  FileManager.cpp  GenericObject.cpp  GlslangCompiler.cpp  LTM.cpp  Logger.cpp  MatrixMath.cpp  Mesh.cpp  ProgramArgs.cpp  RenderInstance.cpp  ResourceDependencies.cpp  SMBFile.cpp  SMBTexture.cpp  ShaderManagement.cpp  TextManager.cpp  (+14 more)
vulkan/: CMakeLists.txt
vulkan/include/: GlslangCompiler.h  IndexTypes.h  RenderInstance.h  TLSFAllocator.h  VKDescriptorLayoutBuilder.h  VKDescriptorLayoutCache.h  VKDescriptorSetBuilder.h  VKDescriptorSetCache.h  VKDevice.h  VKGraph.h  VKInstance.h  VKOneTimeQueue.h  VKPipelineBuilder.h  VKPipelineCache.h  VKPipelineObject.h  VKRenderGraph.h  VKRenderPassBuilder.h  VKShaderCache.h  VKSwapChain.h  VKTexture.h  VKTypes.h  VKUtilities.h
vulkan/src/: GlslangCompiler.cpp  RenderInstance.cpp  TLSFAllocator.cpp  VKDescriptorLayoutBuilder.cpp  VKDescriptorLayoutCache.cpp  VKDescriptorSetBuilder.cpp  VKDescriptorSetCache.cpp  VKDevice.cpp  VKGraph.cpp  VKInstance.cpp  VKOneTimeQueue.cpp  VKPipelineBuilder.cpp  VKPipelineCache.cpp  VKPipelineObject.cpp  VKRenderGraph.cpp  VKRenderPassBuilder.cpp  VKShaderCache.cpp  VKSwapChain.cpp  VKTexture.cpp  VKUtilities.cpp
vulkan/vklib/: vklib.vcxproj  vklib.vcxproj.filters
(+86 files in other folders)
